# bentley_ottmann

./: .azure-pipelines.yml  .bumpversion.cfg  .coveragerc  .env  .pre-commit-config.yaml  .travis.yml  Dockerfile  MANIFEST.in  README.md  docker-compose.cpython.yml  docker-compose.pypy.yml  pyproject.toml  pytest.ini  requirements-tests.txt  requirements.txt  run-tests.ps1  run-tests.sh  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml
bentley_ottmann/: __init__.py  angular.py  base.py  hints.py  linear.py  models.py  planar.py  point.py
bentley_ottmann/_core/: base.py  event.py  events_queue_key.py  events_registry.py  hints.py  sweep_line_key.py  utils.py
bentley_ottmann/core/: __init__.py  angular.py  base.py  bentley_ottmann.py  event.py  events_queue.py  hints.py  linear.py  planar.py  point.py  shamos_hoey.py  sweep_line.py  utils.py
docs/: conf.py  index.rst  requirements.txt
tests/: conftest.py  hints.py  utils.py
tests/base_tests/: strategies.py  test_edges_intersect.py  test_segments_intersect.py  test_segments_intersections.py  test_sweep.py
tests/core_tests/linear_tests/: strategies.py  test_find_intersections.py  test_to_segments_relationship.py
tests/linear_tests/: strategies.py  test_find_intersections.py  test_to_segments_relationship.py
tests/planar_tests/: strategies.py  test_contour_self_intersects.py  test_edges_intersect.py  test_segments_cross_or_overlap.py  test_segments_intersect.py  test_segments_intersections.py  test_segments_overlap.py  test_segments_overlap_or_cross.py
tests/strategies/: __init__.py  base.py
